Adjusting position of profile promo text to avoid it overlapping breadcrumbs. Adding more translations for the pachinko popup override

--- a/src/modules/ResourceBarsModule/styles.lazy.scss
+++ b/src/modules/ResourceBarsModule/styles.lazy.scss
@@ -101,7 +101,7 @@ body > div > header {
 
     .promo_profile_discount_text {
         left: 44px;
-        top: 46px;
+        top: -3px;
 
         @media #{$mediaMobile} {
             left: 116px;
